Project name changed.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EmptyjavaProject1</name>
+	<name>SEW3-Encrypt3</name>
 	<comment></comment>
 	<projects>
 	</projects>
